java_compile_errors_utf8.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
.\gradlew.bat : warning: [options] source value 8 
is obsolete and will be removed in a future 
release
At line:1 char:65
+ ... tudio\jbr"; .\gradlew.bat 
compileDebugJavaWithJavac --console=plain > ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warn 
   ing: [optio... future release:String) [], Rem  
  oteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: [options] target value 8 is obsolete and 
will be removed in a future release
warning: [options] To suppress warnings about 
obsolete options, use -Xlint:-options.
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\InsightsGenerator.java:11: error: incompatible 
types: Double cannot be converted to String
        float overs = 
parseFloat(latest.getOvers());
                                                ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\InsightsGenerator.java:23: error: incompatible 
types: Integer cannot be converted to String
        int target = parse(team1.getRuns()) + 1;
                                        ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\InsightsGenerator.java:24: error: incompatible 
types: Integer cannot be converted to String
        int currentRuns = parse(team2.getRuns());
                                             ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\InsightsGenerator.java:25: error: incompatible 
types: Double cannot be converted to String
        float oversBowled = 
parseFloat(team2.getOvers());
                                                  
   ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:16: error: 
incompatible types: Integer cannot be converted 
to String
            int runs = 
parse(firstInning.getRuns());
                                                ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:17: error: 
incompatible types: Integer cannot be converted 
to String
            int wickets = 
parse(firstInning.getWickets());
                                                  
    ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:18: error: 
incompatible types: Double cannot be converted to 
String
            float overs = 
parseFloat(firstInning.getOvers());
                                                  
       ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:28: error: 
incompatible types: Integer cannot be converted 
to String
            int target = parse(team1.getRuns()) + 
1;
                                            ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:29: error: 
incompatible types: Integer cannot be converted 
to String
            int currentRuns = 
parse(team2.getRuns());
                                                 ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:30: error: 
incompatible types: Integer cannot be converted 
to String
            int wicketsLeft = 10 - 
parse(team2.getWickets());
                                                  
       ^
C:\Users\rohit\.gemini\antigravity\scratch\cricket
_app\app\src\main\java\com\example\cricketapp\logi
c\WinProbabilityCalculator.java:31: error: 
incompatible types: Double cannot be converted to 
String
            float oversBowled = 
parseFloat(team2.getOvers());
                                                  
       ^
Note: Some messages have been simplified; 
recompile with -Xdiags:verbose to get full output
11 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task 
':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error 
output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
16 actionable tasks: 1 executed, 15 up-to-date
